[package]
name = "diesel_yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-session = { version = "0.7.2", features = ["redis-rs-session", "redis-rs-tls-session"] }
actix-web = "4.3.1"
base64 = "0.21.2"
chrono = {version = "0.4.24", features = ["serde"]}
diesel = { version = "2.0.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = {version = "1.3.3", features = ["serde", "v4"] }
