[package]
name = "todoapp"
version = "0.1.0"
edition = "2021"


[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-session = { version = "0.7.2", features = ["redis-rs-session", "redis-rs-tls-session"] }
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
config = { version = "0.13.3", features = ["toml"] }
diesel = { version = "2.0.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
